--- a/_posts/2023-5-24-杂记.md
+++ b/_posts/2023-5-24-杂记.md
@@ -1,5 +1,5 @@
 ---
-title: 计算机图形学基础1：向量
+title: ImageIO实现图像处理工具
 author: bikexs
 date: 2023-5-24 7:00:00 +0800
 categories: [java, other]
@@ -14,7 +14,7 @@ ImageIO类，该类主要提供了对图像进行操作的一些方法。
 
 一个曾经因为工作上的需求简单实现的图片裁剪和拼接的工具类。
 
-```
+```java
 import javax.imageio.ImageIO;
 import javax.imageio.ImageReadParam;
 import javax.imageio.ImageReader;
